--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "celery>=5.4.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.27.0",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=5.3.0",
+    "supabase>=2.0.0",
 ]
 
 [project.optional-dependencies]
