Fix websearch tool authority and optimize harm calculator
**Problem:** Claude AI was misclassifying minor irritants as allergens/PFAS
by using websearch results without database validation, inflating harm scores.

**Solution - Websearch Authority Fixes:**
- Restrict websearch to credible sources only (.gov, .edu, peer-reviewed, manufacturer official sites)
- Strict classification rules: ONLY database substances can be allergens/PFAS
- Inject FULL database (32 allergens + 75 PFAS) instead of subsets
- Add "under_investigation" category for non-database substances with credible evidence
- Priority: Find missing ingredients from manufacturer, regulatory actions, scientific studies, lawsuits

**Solution - Validation Layer:**
- NEW: validation_logger.py - tracks Claude misclassifications in LOG-ONLY mode
- NEW: validate_and_filter_substances() - validates detected substances against database
- Logs invalid allergens/PFAS for review before switching to strict filtering mode
- Case-insensitive matching with synonym support

**Solution - Harm Calculator Optimization:**
- Category-specific scoring for other_concerns (under_investigation: 5 pts max)
- Proper weighting: carcinogen (40), regulatory_action (30), heavy_metal (25)
- Enhanced debug logging with scoring breakdown
- Confidence-weighted scoring to prevent false positives

**Files Changed:**
- backend/src/infrastructure/claude_agent.py (prompts + full database injection)
- backend/src/infrastructure/validation_logger.py (NEW - validation tracking)
- backend/src/api/routes/analyze.py (validation layer integration)
- backend/src/domain/harm_calculator.py (optimized category scoring)

**Next Steps:**
1. Test with real products, review validation logs
2. Switch to STRICT mode after confirming prompt effectiveness
3. Monitor false positive rates via validation_logger.get_daily_stats()

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -30,7 +30,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["src/sidebar.html", "sidebar.js", "assets/*"],
+      "resources": ["src/sidebar.html", "sidebar.js", "assets/*", "icon-128.png", "icon-16.png", "icon-48.png", "ruh_icon_transparent.png"],
       "matches": ["https://*.amazon.com/*", "https://*.amazon.ca/*"]
     }
   ],
