Rename repository from Eject to Ruh
Updated all references to the repository name across the codebase:
- Extension: package.json, manifest.json, cache DB name, CSS IDs
- Backend: pyproject.toml, API title, logger messages
- Documentation: CLAUDE.md project overview

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "eject-backend"
+name = "ruh-backend"
 version = "0.1.0"
 description = "AI-powered product safety analysis backend"
 requires-python = ">=3.13"
