--- a/extension/.env.example
+++ b/extension/.env.example
@@ -1,6 +1,6 @@
 # Backend API Configuration
 VITE_API_BASE_URL=https://ruh-api-948739110049.us-central1.run.app
-VITE_API_KEY=your-api-key-here
+VITE_API_KEY=***REMOVED***
 
 # Development
 VITE_DEBUG=true
