--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "lxml>=5.3.0",
     "supabase>=2.0.0",
+    "slowapi>=0.1.9",
 ]
 
 [project.optional-dependencies]
