--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 anthropic>=0.39.0
+cohere>=5.0.0
 pydantic>=2.9.0
 pydantic-settings>=2.6.0
 psycopg[binary]>=3.2.0
@@ -8,6 +9,9 @@ redis>=5.2.0
 celery>=5.4.0
 python-dotenv>=1.0.0
 httpx>=0.27.0
+playwright>=1.40.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
 cffi>=1.15.0
 supabase>=2.9.0
 slowapi>=0.1.9
